css/styles.css
/* General Website Style rules */
body {
    font-family: "Times New Roman", Times;
    background-color: rgb(235, 248, 251);
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }
/*Top div class*/
.div-1 {
  background-color: lightskyblue;
  height:300px; 
  padding-top:10px;
  padding-bottom:10px;
  text-align:center;
}
/*Top header profile image*/
.profile-small {
  height:140px;
  border-radius: 50%;
  border: 10px double #FFFFFF;
}

/*Styling element instead of specific class*/
h1 {
  font-size:60px;
  color:white;
  margin:5px;
}
.p-1 {
font-size:20px;
color: white;
margin:8px;
}

/*Comment: this will change all hyperlinked text to have this color*/
.link-style {
  font-size:15px;
  color: rgb(0, 115, 186); 
}
footer {
  height:auto;
  background-color:lightskyblue;
}
h2 {
color:white;
margin:10px;
padding:40px;
margin:0;
text-align:center;
}

.div-2 {
  background-color: rgb(235, 248, 251);
  height:40px; 
  padding:5px;
  display: flex;
  justify-content: space-between;
  align-items: center; 
  position: relative; /*Allows positioning for our child elements*/
}

#selectedBookTitle {
  flex-grow: 1; 
  text-align: center;
  margin-left: auto; /*Pushes the title to the center */
  margin-right: auto; /*Pushes the title to the center */
  font-size:20px;
  color: rgb(0, 115, 186); 
}

#bookCount {
  margin-left: auto;
  font-size:20px;
  color: rgb(0, 115, 186); 
}

.title-wrapper {
  flex: 1;
  display: flex;
  justify-content: center; 
  position: absolute; /*Take it out of the normal flow*/
  left: 0;
  right: 0;
}

.book p {
  display: none; /* not displaying book title anymore */
}

.book {
  display: flex; /* Use flex to center the content */
  justify-content: center; /* Horizontally center the content */
  align-items: center; /* Vertically center the content */
  margin: 0; /* Remove any margin that might affect spacing */
  background-color: transparent;
  overflow: visible;
}

.book img {
  max-width: 100px;  /* Adjust to make books smaller ! ! !*/
  width: 70%; /* Make the image change to its container */
  height: auto; 
  border-radius: 8px;
  transition: box-shadow 0.3s ease;/* Fades it in I think? */
}

/* Container id for the Book Grid */
#bookGrid.book-grid {
  display: grid;
  grid-template-columns: repeat(5, 1fr); /* 5 columns */
  grid-gap: 5px; /* Space between grid items */
  padding-top:20px;
  padding-bottom:10px;
  grid-row-gap: 30px; /* Additional vertical space between rows */
  max-width: 700px;  /* Adjust to make books smaller ! ! !*/
  overflow-y: scroll; /* Change to auto, to get rid of scroll bar only when needed*/
  max-height: 525px;
  /*margin: 0 auto;  Center the grid horizontally */
  margin: 0 auto; /* Center the grid horizontally */
  padding-left: 30px; /* Add extra space on the left */
  padding-right: 30px; /* Add extra space on the right */
}

#containerBelowGrid {
  max-width: 700px;  /* Adjust to make books smaller ! ! !*/
  max-height: 525px;
  margin: 0 auto; /* Center horizontally */
  padding-left: 30px; /* Add extra space on the left */
  padding-right: 30px; /* Add extra space on the right */
}

#textBelowGrid {
  font-size:15px;
  color: rgb(0, 115, 186);
  text-align: right;
}

#next-button {
  /* height:70px */
  height:10%;
  width: 100px;
}

/*Button div class*/
.div-3 {
  display: flex;
  justify-content: center; /* Horizontally center the button */
  align-items: center; /* Vertically center the button */
  background-color: rgb(235, 248, 251);
  height:70px; 
  padding-top:10px;
  padding-bottom:20px;
}
/*End game text*/
#end-game-result {
  color:rgb(0, 115, 186); 
  font-size:30px;
  padding:20px;
  text-align:center;
  }

